feat: sync inventory from channel